# chess-server

./: .dockerignore  .editorconfig  .gitignore  README.md  TODO.txt  chess-server.Dockerfile  chess-ui.Dockerfile  cpp-build-base.Dockerfile  deploy.sh  package-lock.json  package.json  websocket_test.py
db-server/: db_init.sh  db_init.sql  db_server.py  quick_test.py
game-server/: .gitignore  CMakeLists.txt  gmon.out
game-server/include/: chess_server.hpp  login.hpp  move_generation.hpp  server.hpp  util.hpp  uuid.hpp  ws.hpp
game-server/include/logger/: logger.hpp
game-server/include/managers/: DBConnectionManager.hpp  EventProcessor.hpp  GameInstanceManager.hpp  GameManager.hpp  MessageProcessor.hpp  TimerDispatch.hpp  UserManager.hpp  ValidationService.hpp
game-server/include/models/: api.hpp  client_connection_info.hpp  create_game_request.hpp  game_instance.hpp  player.hpp  time_control.hpp  user.hpp
game-server/include/network/: HttpServer.hpp  WebSocketServer.hpp
game-server/include/representation/: fen.hpp  move.hpp  offsets.hpp  position.hpp  squares.hpp
game-server/logs/: chess-server-log.txt
game-server/src/: game_instance_manager.cpp  login.cpp  main.cpp  move_generation.cpp  server.cpp  util.cpp  uuid.cpp  ws.cpp
game-server/src/logger/: logger.cpp
game-server/src/models/: user.cpp
game-server/src/network/: http_server.cpp  websocket_server.cpp
game-server/src/representation/: position.cpp
game-server/words/: adjectives.txt  animals.txt
logs/: chess-server-log.txt
public/: index.html
robot-player/: player.py
server/: .gitignore  CMakeLists.txt  main.cpp
server/include/: game_instance.hpp  game_instance_manager.hpp  move_generation.hpp
server/include/representation/: fen.hpp
server/src/: foo.cpp  game_instance_manager.cpp  login.cpp  main.cpp  move_generation.cpp  server.cpp  uuid.cpp
src/: App.css  App.tsx  Board.css  Board.tsx  Position.tsx  index.tsx  piece.tsx  selectedSlice.ts  selectors.ts  store.ts
src/logic/: fen.test.ts  fen.ts
src/models/: actions.ts  fen.ts  position.ts  state.ts
src/store/: store.ts
src/ui/: Board.css  Board.tsx  FenInput.css  Piece.tsx  Pieces.css  Position.tsx
ui/: package-lock.json  package.json  tsconfig.json
ui/public/: manifest.json
ui/src/: App.css  App.test.tsx  App.tsx  index.tsx
ui/src/api/: api.ts  ws.ts
ui/src/logic/: fen.ts  position.ts  uuid.ts
ui/src/models/: actions.ts  api.ts  constants.ts  fen.ts  piece.ts  position.ts  reduxAction.ts  state.ts  uuid.ts
ui/src/store/: selectors.ts  store.ts
ui/src/ui/: Board.css  Board.tsx  CreateGame.css  CreateGame.tsx  FenInput.tsx  Game.tsx  GameSidebar.css  GameSidebar.tsx  Position.tsx  Snackbar.tsx
ui/src/ui/board/: Board.scss  Board.tsx  FenLabel.css  FenLabel.tsx  FilesLabel.tsx  Position.tsx  PromotionChoice.tsx  RanksLabel.tsx  Square.sass  Square.tsx
ui/src/ui/game/: Game.tsx  GameContainer.tsx
ui/src/ui/root/: App.test.tsx  App.tsx  Game.tsx
ui/src/ui/sidebar/: Sidebar.css  Sidebar.tsx
ui/src/ui/sidebar/createGame/: CreateGame.css  CreateGame.tsx  TimeControlInput.css  TimeControlInput.tsx  TimeControlSelection.css  TimeControlSelection.tsx
ui/src/ui/sidebar/gamePlaySidebar/: GamePlaySidebar.css  GamePlaySidebar.tsx  TimeBankDisplay.tsx
